<resources>
    <string name="app_name">Quantum It App</string>
    <string name="news_text">News API</string>

    <!--    Send Feedback-->
    <string name="send_feedback_text">Send Feedback</string>
    <string name="add_Screenshot_Small_text">Add Screenshot Small</string>
    <string name="add_Screenshot_Large_text">Add Screenshot Large</string>
    <string name="close_Image_text">Close Image</string>
    <string name="feedbackEditTextHint">Please write your feedback</string>
    <string name="feedbackEditTextError">Please write something in feedback</string>
    <string name="systemInfo_text">Your System Info will be send to our developer team</string>
    <string name="add_screenshot_text">+ Add Screenshot</string>
    <string name="ok_text">OK</string>


    <!--    Network Provider-->
    <string name="wifi_text">Wifi</string>
    <string name="mobile_data_text">Mobile Data</string>
    <string name="vpn_text">Vpn</string>
    <string name="no_internet_text">No Internet</string>

    <!--    System Info-->
    <string name="app_version_text">App Version : </string>
    <string name="system_info_text"> System Info </string>
    <string name="device_text">Device : </string>
    <string name="os_api_level_text">Os Api Level : </string>
    <string name="language_text">Language : </string>
    <string name="total_memory_text">Total Heap Memory : </string>
    <string name="free_memory_text">Free Heap Memory : </string>
    <string name="screen_Text">Screen Size : </string>
    <string name="network_type_text">Network Type : </string>

    <!--    Login $ Sign up-->
    <string name="alreadyHaveAn_text">Already\nhave an\nAccount?</string>
    <string name="loginWith_text">Login with Email</string>
    <string name="emailPhoneNumber_text">Email</string>
    <string name="password_text">Password</string>
    <string name="troubleLogin_text">Trouble Logging In?</string>
    <string name="newUser_text">New User? Register Now</string>
    <string name="useOtherMethod_text">Use Other Method</string>

    <string name="hereYourFirstStep_text">Hers\'s\nyour first\nstep with\nus!</string>
    <string name="fillTheForm_text">Sign-Up with Email</string>
    <string name="firstName_text">First Name</string>
    <string name="lastName_text">Last Name</string>

    <string name="loginIcon_text">Login Icon</string>
    <string name="signUpIcon_text">Sign-Up Icon</string>

    <string name="googleIcon_text">Google Login Icon</string>3
    <string name="errorLogin_text">User does not exist</string>
    <string name="errorSignUp_text">Can\'t Create New Account</string>
    <string name="emailOrPhoneEmpty_text">Please Write Email or PhoneNumber</string>
    <string name="passwordEmpty_text">Please Write Password</string>
    <string name="somethingEmpty_text">Please Write Something</string>


    <!--    Navigation Drawer-->
    <string name="action_login">Login</string>
    <string name="action_signup">Sign-Up</string>
    <string name="action_sendFeedback">Send Feedback</string>


    <!--    Sign Up -->
    <string name="resend">Resend</string>
    <string name="verification_send_text">Verification Email Sent!</string>
    <string name="please_verify_email_text">Please verify your email by clicking on the link sent to your email</string>
    <string name="google_default_web_client_id">732436177693-f3u65314hvi3qp4ihptrls0rlrkakp6b.apps.googleusercontent.com</string>

    <!--Facebook ign in -->
    <string name="facebook_app_id">373059550923833</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">5c305dd79ab4fd4bc8931318fe4820de</string>


    <!--  MainActivity  Bottom Toolbar-->
    <string name="search_optionMenu">Search</string>
    <string name="refresh_optionMenu">Refresh</string>
    <string name="setting_optionMenu">Setting</string>

    <!--    Error-->
    <string name="somethingWentWrong_text">Something Went Wrong</string>
    <string name="noInternetConnection_text">No Internet Connection</string>

<!--    Setting -->
    <string name="select_data_type_text">Select News Type</string>
    <string name="everything_text">Everything</string>
    <string name="top_heading_text">Top Heading</string>

    <string name="click_back_text">Click Back Again To Exit</string>
    <string name="logOut_optionMenu">Log out</string>

</resources>